2004-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el: Move the version of ELisp-based uncompface program
	to the contrib directory because of the copyright problem.

2004-10-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-kill-buffer): Raise the current frame.

2004-10-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el: Mention that multibyte characters don't work as marks.

	* gnus.el (message-y-or-n-p): Autoload.

	* pop3.el (pop3-maildrop, pop3-mailhost, pop3-port)
	(pop3-password-required, pop3-authentication-scheme)
	(pop3-leave-mail-on-server): Made customizable.
	(pop3): New custom group.
	(pop3-retr): Remove `sleep-for' statements.
	Suggested by Dave Love <fx@gnu.org>.

	* nnheader.el (nnheader-read-timeout): Explain 1.0 timeout for
	Windows/DOS.

	* imap.el (imap-parse-flag-list, imap-parse-body-extension)
	(imap-parse-body): Fix incorrect use of `assert'.  Suggested by
	Dave Love <fx@gnu.org>.

	* mml.el (mml-minibuffer-read-disposition): Require match.
	Suggested by Dave Love <fx@gnu.org>.

2004-10-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-delete-group): Change "\t." to "  " in
	doc string.

2004-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-dissect-text-parts): Support all text/* types.

2004-10-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* gnus-art.el (gnus-mime-display-single): Call `mm-display-inline'
	instead of calling `mm-insert-inline', to decode text/* parts
	before displaying them.

2004-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-text-plain-type): New variable.
	(mm-uu-pgp-signed-extract-1): Use it.
	(mm-uu-pgp-encrypted-extract-1): Use it.
	(mm-uu-dissect): Allow MIME type and parameters as an optional arg;
	bind mm-uu-text-plain-type with that value.
	(mm-uu-dissect-text-parts): Pass MIME type and parameters to
	mm-uu-dissect.

2004-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-update-group-mark-positions):