@@ -1,3 +1,13 @@
+2004-10-10  Juri Linkov  <juri@jurta.org>
+
+	* gnus.texi (Top, Marking Articles): Join two menus in one node
+	because a node can have only one menu.
+
+2004-10-09  Juri Linkov  <juri@jurta.org>
+
+	* gnus.texi (Fancy Mail Splitting): Remove backslash in the
+	example of nnmail-split-fancy.
+
 2004-10-12  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* gnus-faq.texi ([5.9]): Improve code for reply-in-news.
